garde_derive_tests/tests/compile-fail/duplicate_rule.rs
#[derive(garde::Validate)]
struct Test<'a> {
    #[garde(ascii, ascii)]
    field: &'a str,
}

fn main() {}
