garde_derive_tests/tests/compile-fail/duplicate_rule.stderr
error: duplicate rule `ascii`
 --> tests/compile-fail/duplicate_rule.rs:3:7
  |
3 |     #[garde(ascii, ascii)]
  |       ^^^^^
